fix: allow clicking popup scrollbar by disabling overlay pointer events

--- a/src/customJs/main.css
+++ b/src/customJs/main.css
@@ -99,3 +99,7 @@
   background: rgba(0, 0, 0, 0);
   color: #302100;
 }
+
+.u-popup-overlay {
+  pointer-events: none !important;
+}
